--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,24 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import MainLayout from '../layouts/MainLayout.astro';
+import Header from '../components/Header.astro';
+import Hero from '../components/Hero.astro';
+import QuestionsSection from '../components/QuestionsSection.astro';
+import ExpertSection from '../components/ExpertSection.astro';
+import HowItWorks from '../components/HowItWorks.astro';
+import SecuritySection from '../components/SecuritySection.astro';
+import FormSection from '../components/FormSection.astro';
+import ReviewsSection from '../components/ReviewsSection.astro';
+import Footer from '../components/Footer.astro';
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<MainLayout>
+  <Header />
+  <Hero />
+  <QuestionsSection />
+  <ExpertSection />
+  <HowItWorks />
+  <SecuritySection />
+  <FormSection />
+  <ReviewsSection />
+  <Footer />
+</MainLayout> 
