--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -113,7 +113,7 @@
     height: 69px;
     background: transparent;
     border: none;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     @media (max-width: 768px) {
       width: 100%;
     }
