--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -119,7 +119,7 @@
     margin: 0;
     line-height: 1.45;
     flex-grow: 1;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
   }
 
   .decoration {
