--- a/src/components/QuestionsSection.astro
+++ b/src/components/QuestionsSection.astro
@@ -150,6 +150,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: 'Montserrat', sans-serif;
   }
 
   .question-card h3 {
