--- a/src/components/ExpertSection.astro
+++ b/src/components/ExpertSection.astro
@@ -187,7 +187,7 @@
     color: rgba(255, 255, 255, 0.9);
     line-height: 45px;
     font-weight: 400;
-    font-family: "Mulish", sans-serif;
+    font-family: "Montserrat", sans-serif;
   }
 
   @media (max-width: 1600px) {
