--- a/src/components/FormSection.astro
+++ b/src/components/FormSection.astro
@@ -146,7 +146,7 @@
     border: none;
     border-radius: 60px;
     padding: 20px 30px;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     color: #fff;
     outline: none;
