--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -86,7 +86,7 @@
     margin-bottom: 40px;
     color: #b0b0b0;
     max-width: 480px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
   }
 
   .tarot-cards {
