--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -118,7 +118,7 @@ img, svg, video, canvas, audio, iframe, embed, object {
   color: #ffffff;
   font-size: 16px;
   transition: all 0.3s ease;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .form-input:focus {
