--- a/src/components/FormSection.astro
+++ b/src/components/FormSection.astro
@@ -176,7 +176,7 @@
   .textarea-input {
     min-height: 80px;
     resize: vertical;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
   }
 
   .form-button {
