--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -198,6 +198,8 @@
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
+    width: 100%;
+    max-width: 289px;
   }
 
   .logo img {
@@ -433,6 +435,7 @@
     .logo{
       padding: 6px 11px;
       border-width: 0.46px; 
+      width: auto;
     }
     .logo img{
       height: 18.55px;
