--- a/src/components/FormSection.astro
+++ b/src/components/FormSection.astro
@@ -25,7 +25,7 @@
         <input 
           type="text" 
           name="contact"
-          placeholder="Email / Telegram / Viber" 
+          placeholder="Номер телефону / Telegram / Viber" 
           class="form-input contact-input"
           required
         />
